data loading model updated

--- a/tcr_dl_model.ipynb
+++ b/tcr_dl_model.ipynb
@@ -572,11 +572,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ANN Model Deployment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Deploying TCR-wop model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import keras\n",
+    "model.save('tcr-wop.h5')"
+   ]
   }
  ],
  "metadata": {
